--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,10 @@
     <string name="girlEr">What are ypu doing? You have the girlfriend</string>
     <string name="barEr">Sorry, but you in wrong condition</string>
     <string name="bothEr">At the moment, it is forbidden to you to do it</string>
+    <string name="loadBut">Load</string>
+    <string name="Filtr">Select modifications:</string>
+    <string name="Without">without mods</string>
+    <string name="Girl">girl</string>
+    <string name="Car">car</string>
+    <string name="Dubai">Dubai</string>
 </resources>
