Image capturing added

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -14,4 +14,6 @@
     <string name="Dubai">Дубаи</string>
     <string name="Girl">Девушка</string>
     <string name="Without">Без модификаций</string>
+    <string name="takePic">Добавить изображение</string>
+    <string name="delPic">Отменить добавление</string>
 </resources>
