--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,6 @@
     <string name="Girl">girl</string>
     <string name="Car">car</string>
     <string name="Dubai">Dubai</string>
+    <string name="takePic">Add picture</string>
+    <string name="delPic">Cancel Adding</string>
 </resources>
