send email intent is ready

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -16,4 +16,5 @@
     <string name="Without">Без модификаций</string>
     <string name="takePic">Добавить изображение</string>
     <string name="delPic">Отменить добавление</string>
+    <string name="Subject">От чистого сердца с любовью</string>
 </resources>
