--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="Dubai">Dubai</string>
     <string name="takePic">Add picture</string>
     <string name="delPic">Cancel Adding</string>
+    <string name="Subject">From my heart with love</string>
 </resources>
